@@ -62,7 +62,7 @@ class SystemSettingPane(gtk.VBox):
               (D+'other_icons/s_configure_firefox.png', _('Configure Firefox'), 'firefox', ),
               (D+'umut_icons/s_host_name.png', _('Host name'), 'host_name', ),
               (D+'umut_icons/s_login_window.png', _('Login window'), 'login_window', ),
-              (D+'umut_icons/s_gedit.png', _('File Configure'), 'file_configure'),
+              (D+'umut_icons/s_gedit.png', _('File editor'), 'file_editor'),
                 ]:
             if category in existing_categories:
                 pixbuf = icon(iconpath) 
